# expo-libghostty

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  devenv.nix  expo-module.config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vendor-manifest.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: build-android-libs.yml  ci.yml  release.yml  vendor-watch.yml
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: ghostty_jni.cpp
android/src/main/java/expo/modules/libghostty/: ExpoLibghosttyModule.kt  ExpoLibghosttyView.kt  GhosttyTerminalView.kt  GhosttyVt.kt  SnapshotFormat.kt  StickyModifier.kt  TerminalAccessoryBar.kt
android/src/test/java/expo/modules/libghostty/: SnapshotFormatTest.kt  StickyModifierTest.kt
example/: App.tsx  app.json  metro.config.js  package.json  tsconfig.json  webpack.config.js
ios/: ExpoLibghostty.podspec  ExpoLibghosttyModule.swift  ExpoLibghosttyView.swift  GhosttyKit.podspec  GhosttyTerminal.podspec  MSDisplayLink.podspec
ios/privacy/GhosttyKit/: PrivacyInfo.xcprivacy
ios/privacy/GhosttyTerminal/: PrivacyInfo.xcprivacy
scripts/: download-android-libs.mjs  download-xcframework.mjs  sync-vendor.sh  vendor-watch.sh
src/: ExpoLibghostty.types.ts  ExpoLibghosttyModule.ts  ExpoLibghosttyModule.web.ts  ExpoLibghosttyView.tsx  ExpoLibghosttyView.web.tsx  index.ts
src/__tests__/: ExpoLibghosttyView.test.tsx
